--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,26 +1,30 @@
-.navbar{
+.navbar {
     height: 100px;
-
-    .wrapper{
-        max-width: 1366px;
-        margin:  auto;
+    z-index: 1001; 
+  
+    .wrapper {
+      max-width: 1366px;
+      margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 100%;
+      padding: 0 20px; 
+  
+      span {
+        font-weight: bold;
+        margin-left: 80px; 
+      }
+  
+      .social {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 100%;
-
-        span{
-            font-weight: bold;
+        gap: 20px;
+  
+        img {
+          width: 18px;
+          height: 18px;
         }
-
-        .social{
-            display: flex;
-            gap: 20px;
-
-            img{
-                width: 18px;
-                height: 18px;
-            }
-        }
+      }
     }
-}
+  }
+  
