--- a/src/Components/Parallax/Parallax.scss
+++ b/src/Components/Parallax/Parallax.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss";
+
 .parallax {
   width: 100%;
   height: 100%;
@@ -10,7 +12,10 @@
   h1 {
     font-size: 100px;
 
-
+    @include mobile {
+      font-size: 72px;
+      text-align: center;
+    }
   }
 
   .mountains {
@@ -22,7 +27,10 @@
     position: absolute;
     z-index: 3;
 
-   
+    @include mobile {
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
   }
   .planets {
     background-size: cover;
@@ -31,7 +39,10 @@
     height: 100%;
     position: absolute;
     z-index: 2;
-  
+    @include mobile {
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
   }
   .stars {
     background-image: url("/stars.png");
