--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -1,3 +1,4 @@
+@import "../../app.scss";
 
 .portfolio {
   position: relative;
@@ -11,6 +12,10 @@
     color: orange;
     font-size: 36px;
 
+    @include mobile {
+      padding-top: calc(100vh - 100px);
+      font-size: 24px;
+    }
 
     .progressBar {
       height: 10px;
@@ -35,18 +40,27 @@
       justify-content: center;
       gap: 50px;
 
+      @include mobile {
+        flex-direction: column;
+      }
 
       .imageContainer {
         flex: 1;
         height: 50%;
 
+        @include mobile {
+          width: 100%;
+          max-height: 300px;
+        }
 
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
 
-          
+          @include mobile {
+            object-fit: contain;
+          }
         }
       }
 
@@ -56,22 +70,34 @@
         flex-direction: column;
         gap: 30px;
 
-       
+        @include mobile {
+          transform: none !important;
+          padding: 10px;
+          align-items: center;
+          text-align: center;
+        }
 
         h2 {
           font-size: 72px;
 
-          
+          @include mobile {
+            font-size: 36px;
+          }
         }
 
         p {
           color: gray;
           font-size: 20px;
 
-         
+          @include mobile {
+            font-size: 16px;
+          }
         }
 
-        button {
+        a {
+          text-decoration: none;
+
+          button {
             background-color: orange;
             border: none;
             border-radius: 10px;
@@ -82,16 +108,17 @@
             align-items: center;
             justify-content: center;
             gap: 10px;
-  
+
             img.github-logo {
               width: 20px;
               height: 20px;
             }
-  
+
             strong {
               font-weight: bold;
             }
           }
+        }
       }
     }
   }
