--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,5 +1,4 @@
 @import "../../app.scss";
-
 .sidebar {
   display: flex;
   flex-direction: column;
@@ -7,15 +6,19 @@
   justify-content: center;
   background-color: white;
   color: black;
-
+  
   .bg {
-    z-index: 999; 
+    z-index: 999;
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     width: 400px;
     background: white;
+
+    @include mobile {
+      width: 200px;
+    }
 
     .links {
       position: absolute;
@@ -29,16 +32,21 @@
 
       a {
         font-size: 40px;
+
+        @include mobile {
+          font-size: 20px;
+        }
       }
     }
   }
 
   button {
-    z-index: 1000; 
+    z-index: 999;
     position: fixed;
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    position: fixed;
     top: 25px;
     left: 25px;
     background-color: transparent;
@@ -46,4 +54,3 @@
     cursor: pointer;
   }
 }
-
