--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -1,108 +1,166 @@
+@import "../../app.scss";
+
 .skills {
-    background: linear-gradient(180deg, #0c0c1d, #111132);
-    height: 100%;
+  background: linear-gradient(180deg, #0c0c1d, #111132);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #ffffff;
+  padding: 20px;
+  padding-bottom: 20px;
+
+  .text-container {
+    flex: 1;
+    align-self: flex-end;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    text-align: right;
+
+    @include mobile {
+      align-self: center;
+      text-align: center;
+      flex-direction: column;
+    }
+
+    p {
+      font-weight: 200;
+      font-size: 20px;
+      color: gray;
+    }
+
+    hr {
+      width: 250px;
+      border: none;
+      border-top: 0.5px solid gray;
+
+      @include mobile {
+        width: 150px;
+      }
+    }
+  }
+
+  .title-container {
+    flex: 2;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    color: #ffffff;
-    padding: 20px;
-  
-    .text-container {
-      flex: 1;
-      align-self: flex-end;
+    align-items: center;
+
+    @include mobile {
+      width: 100%;
+    }
+
+    .title {
       display: flex;
       align-items: center;
-      gap: 20px;
-      text-align: right;
-  
-      p {
-        font-weight: 200;
-        font-size: 20px;
-        color: gray;
+      gap: 50px;
+
+      @include mobile {
+        flex-direction: column;
+        text-align: center;
+        gap: 20px;
       }
-  
-      hr {
-        width: 250px;
+
+      img {
+        width: 300px;
+        height: 150px;
+        border-radius: 50px;
+        object-fit: cover;
+        transform: translateY(20px);
+
+        @include mobile {
+          width: 150px;
+          height: 75px;
+        }
+      }
+
+      h1 {
+        font-size: 96px;
+        font-weight: 100;
+
+        @include mobile {
+          font-size: 36px;
+        }
+      }
+
+      button {
+        width: 300px;
+        height: 100px;
+        border-radius: 50px;
+        background-color: orange;
         border: none;
-        border-top: 0.5px solid gray;
+        font-size: 24px;
+        cursor: pointer;
+
+        @include mobile {
+          font-size: 16px;
+          width: 150px;
+          height: 50px;
+        }
       }
     }
-  
-    .title-container {
-      flex: 2;
+  }
+
+  .list-container {
+    flex: 2;
+    display: flex;
+    max-width: 1366px;
+    margin: auto;
+    gap: 20px;
+    flex-wrap: wrap;
+
+    @include mobile {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .box {
+      padding: 30px;
+      border: 0.5px solid gray;
       display: flex;
       flex-direction: column;
-      align-items: center;
-  
-      .title {
-        display: flex;
-        align-items: center;
-        gap: 50px;
-  
-        img {
-          width: 300px;
-          height: 150px; 
-          border-radius: 50px;
-          object-fit: cover;
-          transform: translateY(20px);
-        }
-  
-        h1 {
-          font-size: 96px;
-          font-weight: 100;
-        }
-  
-        button {
-          width: 300px;
-          height: 100px;
-          border-radius: 50px;
-          background-color: orange;
-          border: none;
-          font-size: 24px;
-          cursor: pointer;
+      justify-content: space-between;
+      width: 48%;
+      background-color: #222;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      margin-bottom: 20px;
+
+      @include mobile {
+        width: 45%;
+        padding: 10px;
+      }
+
+      h2 {
+        font-size: 1.5em;
+        margin-bottom: 10px;
+
+        @include mobile {
+          font-size: 1.2em;
         }
       }
-    }
-  
-    .list-container {
-      flex: 2;
-      display: flex;
-      max-width: 1366px;
-      margin: auto;
-      gap: 20px;
-      flex-wrap: wrap;
-  
-      .box {
-        padding: 30px;
-        border: 0.5px solid gray;
+
+      .skills-list {
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 48%;
-        background-color: #222;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        margin-bottom: 20px;
-  
-        h2 {
-          font-size: 1.5em;
-          margin-bottom: 10px;
-        }
-  
-        .skills-list {
-          display: flex;
-          flex-wrap: wrap;
-          gap: 10px;
-  
-          .skill-item {
-            background-color: #333;
-            padding: 10px 15px;
-            color: white;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+        flex-wrap: wrap;
+        gap: 10px;
+
+        .skill-item {
+          background-color: #333;
+          padding: 10px 15px;
+          color: white;
+          border-radius: 5px;
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+
+          @include mobile {
+            padding: 5px 10px;
+            font-size: 12px;
           }
         }
       }
     }
   }
-  
+}
