--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -5,107 +5,84 @@
   overflow: hidden;
   background: linear-gradient(180deg, #0c0c1d, #111132);
   position: relative;
+  z-index: 1; /* Ensure hero section is on top */
 
   .wrapper {
     max-width: 1366px;
     height: 100%;
     margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    position: relative; /* Ensure wrapper is above other elements */
 
-    @include mobile {
-      flex-direction: column;
-      justify-content: flex-start;
-      padding-top: 20px;
-    }
-  }
-
-  .textContainer {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 40px;
-
-    @include mobile {
-      width: 100%;
-      height: auto;
-      align-items: center;
-      text-align: center;
-      gap: 20px;
-    }
-
-    h2 {
-      font-size: 30px;
-      color: rebeccapurple;
-      letter-spacing: 10px;
-    }
-
-    h1 {
-      font-size: 88px;
-
-      @include mobile {
-        font-size: 36px;
-      }
-    }
-
-    .buttons {
+    .textContainer {
+      width: 50%;
+      height: 100%;
       display: flex;
-      gap: 20px;
+      flex-direction: column;
+      justify-content: center;
+      gap: 40px;
+      position: relative; /* Ensure textContainer is above other elements */
+      z-index: 2; /* Ensure textContainer is above other elements */
 
       @include mobile {
-        flex-direction: column;
-        gap: 10px;
+        height: 50%;
+        width: 100%;
+        gap: 20px;
+        align-items: center;
+        text-align: center;
       }
 
-      button {
-        padding: 20px;
-        border: 1px solid white;
-        border-radius: 10px;
-        background-color: transparent;
-        color: white;
-        cursor: pointer;
-        font-weight: 300;
+      h2 {
+        font-size: 30px;
+        color: rebeccapurple;
+        letter-spacing: 10px;
       }
-    }
 
-    img {
-      width: 50px;
+      h1 {
+        font-size: 88px;
+
+        @include mobile {
+          font-size: 36px;
+        }
+      }
+
+      .buttons {
+        z-index: 3; /* Ensure buttons are above other elements */
+        button {
+          padding: 20px;
+          border: 1px solid white;
+          border-radius: 10px;
+          background-color: transparent;
+          color: white;
+          margin-right: 20px;
+          cursor: pointer;
+          font-weight: 300;
+        }
+      }
+
+      img {
+        width: 50px;
+      }
     }
   }
 
   .imageContainer {
-    height: auto;
-    width: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 100%;
     position: absolute;
-    top: 50%;
-    right: 50px;
-    transform: translateY(-50%);
-    z-index: 5;
+    top: 0;
+    right: 0;
+    z-index: 1; 
 
     @include mobile {
-      position: static;
-      width: 100px;
-      height: 100px;
-      margin-bottom: 20px;
-      transform: none;
+      height: 50%;
+      width: 100%;
+      top: unset;
+      bottom: 0;
     }
 
     img {
       width: 100%;
-      height: auto;
-      border-radius: 50%;
+      height: 100%;
       object-fit: cover;
-
-      @include mobile {
-        width: 100%;
-        height: 100%;
-      }
     }
   }
 
@@ -117,6 +94,6 @@
     color: #ffffff09;
     width: 50%;
     font-weight: bold;
-    z-index: 1;
+    z-index: 0; 
   }
 }
