--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -2,7 +2,6 @@
 
 .navbar {
   height: 100px;
-  z-index: 1001;
 
   .wrapper {
     max-width: 1366px;
@@ -11,11 +10,19 @@
     align-items: center;
     justify-content: space-between;
     height: 100%;
-    padding: 0 20px;
+
+    @include mobile {
+      justify-content: flex-end;
+      padding: 20px;
+    }
 
     span {
       font-weight: bold;
-      margin-left: 80px;
+      margin-left: 30%;
+
+      @include mobile {
+        display: none;
+      }
     }
 
     .social {
@@ -26,77 +33,6 @@
         width: 18px;
         height: 18px;
       }
-    }
-  }
-
-  @include mobile {
-    .wrapper {
-      justify-content: flex-end;
-      span {
-        display: none;
-      }
-      .social {
-        display: flex;
-        justify-content: center;
-      }
-    }
-  }
-}
-
-.sidebar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  color: black;
-
-  .bg {
-    z-index: 999;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 400px;
-    background: white;
-
-    .links {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 20px;
-
-      a {
-        font-size: 40px;
-      }
-    }
-  }
-
-  button {
-    z-index: 1000;
-    position: fixed;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    top: 25px;
-    left: 25px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-  }
-
-  @include mobile {
-    .bg {
-      width: 100%;
-    }
-
-    button {
-      top: 10px;
-      left: 10px;
     }
   }
 }
