--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -94,29 +94,18 @@
           }
         }
 
-        a {
-          text-decoration: none;
+        button {
+          background-color: orange;
+          border: none;
+          border-radius: 10px;
+          padding: 10px;
+          width: 200px;
+          cursor: pointer;
+          z-index: 1;
 
-          button {
-            background-color: orange;
-            border: none;
-            border-radius: 10px;
-            padding: 10px;
-            width: 200px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
-
-            img.github-logo {
-              width: 20px;
-              height: 20px;
-            }
-
-            strong {
-              font-weight: bold;
-            }
+          @include mobile {
+            width: 150px;
+            font-size: 14px;
           }
         }
       }
