--- a/src/Components/Portfolio/Portfolio.scss
+++ b/src/Components/Portfolio/Portfolio.scss
@@ -107,6 +107,12 @@
             width: 150px;
             font-size: 14px;
           }
+
+          
+          a {
+            color: inherit; 
+            text-decoration: none; 
+          }
         }
       }
     }
