--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -46,7 +46,7 @@
       }
 
       .buttons {
-        z-index: 3; /* Ensure buttons are above other elements */
+        z-index: 3; 
         button {
           padding: 20px;
           border: 1px solid white;
