--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -94,6 +94,7 @@
         background-color: orange;
         border: none;
         font-size: 24px;
+        text-decoration: none;
         cursor: pointer;
 
         @include mobile {
